# libmtp

./: Cargo.toml  LICENSE  README.md
doc/: CHANGELOG.md  CONTRIBUTING.md
examples/: copy-from-host.rs  copy-to-host.rs  list-devices.rs  list-objects.rs  list-storages.rs
src/: convert.rs  dev.rs  device.rs  err.rs  error.rs  ffi.rs  lib.rs  obj.rs  object.rs  storage.rs
